Tarea 1 initial commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SecondActivity" android:parentActivityName=".MainActivity">
+        <activity android:name=".Tarea1Activity2"
+            android:parentActivityName=".Tarea1">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.pucmm.hello.Tarea1" />
+
+        </activity>
+        <activity
+            android:name=".Tarea1"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.pucmm.hello.MainActivity" />
         </activity>
-
+        <activity
+            android:name=".SecondActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.pucmm.hello.MainActivity" />
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
